# langust

./: CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
exmpls/: Cargo.toml
exmpls/src/: main.rs
linal/: Cargo.toml  README.md
linal/benches/: linal_benchmark.rs
linal/examples/: simple.rs
linal/src/: lib.rs  traits.rs
linal/src/array/: core.rs  macros.rs  mod.rs  null.rs  traits.rs  types.rs
linal/src/matrix/: core.rs  errors.rs  matrix.rs  mod.rs  simd.rs
linal/src/simd/: errors.rs  f32.rs  mod.rs  traits.rs
monumel/: Cargo.toml
src/: lib.rs
src/linal/: matrix.rs
